# ec-graphrag

./: .gitignore  README.md  pyproject.toml
configs/: retrieval_two_stage.json
notebooks/: evaluate_graphrag_vs_calibrated.ipynb  run_dual_dataset_ablation.ipynb
scripts/: run_enrichment_pipeline.py  run_multihop_experiment.py  test_enrich_demo.py
src/ecgraphrag/: __init__.py  benchmark.py  calibrate.py  cli.py  communities.py  dataset.py  enrich.py  extract.py  indexer.py  ingest.py  metrics.py  models.py  openrouter.py  retrieve.py  storage.py  text.py  visualize.py
tests/: test_ablation.py  test_dataset.py  test_enrich.py  test_metrics.py  test_openrouter.py  test_pipeline.py  test_visualize.py
